# datasets

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  dagster.yaml  dagster_cloud.yaml  dagster_deployment_settings.graphql.json  dagster_deployment_settings.json  pyproject.toml  schema.drawio  teste.py  workspace.yaml
.github/workflows/: deploy_code_location.yaml
_sandbox/: main.py
analysis/: xp_estimation.py
data/cdragon/coordinates/: buildings.json  camps.json
docs/: old_dataset_tiering.md
pipelines/ds-documents/: pyproject.toml
pipelines/ds-documents/src/ds_documents/: grounding.py  patch.py  registry.py  schemata.py  sources.py
pipelines/ds-hugging-face/src/ds_hugging_face/: publish.py  schemata.py
pipelines/ds-hugging-face/src/ds_hugging_face/templates/: main.md
pipelines/ds-hugging-face/src/ds_hugging_face/templates/esports/: changelist.md
pipelines/ds-hugging-face/src/ds_hugging_face/templates/esports_entities/: card.md  changelist.md  tables.md  transformations.md
pipelines/ds-hugging-face/src/ds_hugging_face/templates/esports_matches/: tables.md
pipelines/ds-hugging-face/src/ds_hugging_face/templates/ultimate/snapshot/: changelist.md
pipelines/ds-leaguepedia/: pyproject.toml
pipelines/ds-leaguepedia/src/ds_leaguepedia/: __init__.py  cargo.py  clean.py  definitions.py  partitions.py  raw.py  schemata.py
pipelines/ds-platform/: pyproject.toml
pipelines/ds-platform/src/ds_platform/: __init__.py  partitions.py
pipelines/ds-riot-api/: pyproject.toml
pipelines/ds-riot-api/src/ds_riot_api/: player_matches.py  player_rank.py  schemata.py  worker.py
pipelines/ds-runtime/: pyproject.toml
pipelines/ds-runtime/src/ds_runtime/: __init__.py
src/cdragon/: coordinates.py  main.py
src/common/: __init__.py  tqdm.py
src/constants/: __init__.py  regions.py
src/dagster/: definitions.py
src/hugging_face/: card.py  dataset.py  main.py
src/hugging_face/templates/: main.md
src/hugging_face/templates/basic/: match.md  matches.md
src/hugging_face/templates/basic/matches/: changelist.md  tables.md  transformations.md
src/hugging_face/templates/datasets/: match.md
src/hugging_face/templates/ultimate/: events.md
src/hugging_face/templates/ultimate/events/: changelist.md  tables.md
src/hugging_face/templates/ultimate/snapshot/: tables.md
src/orchestration/: chatbot.py  constants.py  definitions.py  document.py  env.py  leaguepedia.py  private.py  riot_api.py
src/riot_api/: __init__.py  get.py  league_entries.py  main.py  player_matches.py  schema.py  transform.py  worker.py  workers.py
src/riot_api/tests/: test_get.py
src/storage/: __init__.py  storage.py  storage_base.py  storage_iceberg.py  storage_local.py  storage_parquet.py  storage_partition.py  storage_s3.py
src/storage/tests/: test_storage.py  test_storage_parquet.py  test_storage_partition.py
src/tables/: main.py
src/tables/base/riot_api/: transform.py  worker.py
src/tables/basic/: worker.py
src/tables/basic/matches/: schema.py  transform.py  worker.py
src/tables/basic/riot_api/: transform.py  worker.py
src/tables/gold/events/: transform.py  worker.py
src/tables/silver/riot_api/: schema.py  worker.py
src/tables/ultimate/: worker.py
src/tables/ultimate/events/: main.py  transform.py  worker.py
src/tables/ultimate/snapshot/: main.py  transform.py
