[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gptilt-datasets"
version = "0.1.0"
readme = "README.md"
description = "Project for building a collection of League of Legends datasets"
# license = {file = "LICENSE.txt"}
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.8.1",
    "boto3>=1.40.32",
    "dagster>=1.11.8",
    "dagster-cloud>=1.11.8",
    "dagster-dg-cli>=1.11.8",
    "dagster-webserver>=1.11.8",
    "datasets>=3.6.0",
    "dorans>=0.2.5",
    "duckdb>=1.3.2",
    "huggingface-hub>=0.30.2",
    "Jinja2>=3.1.6",
    "matplotlib>=3.10.1",
    "polars>=1.30.0",
    "pyarrow>=19.0.1",
    "requests>=2.31.0",
    "sentence-transformers>=5.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
test = [
    "asyncio >=0.26.0",
    "pytest >=2.7.3",
]
analysis = [
    "scikit-learn >= 1.6.1",
    "seaborn >= 0.13.2",
    "statsmodels >= 0.14.4"
]

# Entry points
[project.scripts]
ds-cdragon = "cdragon.main:main"
ds-hf = "hugging_face.main:main"
ds-riot-api = "riot_api.main:main"
ds-tables = "tables.main:main"

# Hatch (build tool)
[tool.hatch.build]
include = ["src/**"]
sources = ["src"]

# Dagster (orchestration)
[tool.dg]
directory_type = "project"
[tool.dg.project]
root_module = "src.dagster"
