[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gptilt-datasets"
version = "0.0.1"
description = "Datasets for the League of Legends community!"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.11.8",
    "polars>=1.28",
    "pyarrow==18.1",
    "pyiceberg[pyiceberg-core]>=0.10",
    "PyJWT>=2.12.0",
    "requests>=2.31.0",
    # GPTilt Datasets Packages
    "ds-cdragon",
    "ds-common",
    "ds-hugging-face",
    "ds-riot-api",
    "ds-storage",
    "ds-tables"
]

[project.optional-dependencies]
private = ["ds-chatbot"]

[dependency-groups]
dev = [
    "dagster-webserver>=1.11.8",
    "dagster-dg-cli>=1.11.8",
]
cloud = [
    "dagster-cloud>=1.11.8",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
ds-cdragon = {workspace = true }
ds-common = {workspace = true }
ds-hugging-face = {workspace = true }
ds-riot-api = {workspace = true }
ds-storage = {workspace = true }
ds-tables = {workspace = true }
# Private Modules
ds-chatbot = {workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/orchestration"]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "orchestration"