[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gptilt-datasets"
version = "0.0.1"
description = "Datasets for the League of Legends community!"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.13.1",
    "dorans>=0.2.6",
    "polars>=1.28",
    "pyarrow==18.1",
    "pyiceberg[pyiceberg-core]>=0.10",
    "PyJWT>=2.12.0",
    "requests>=2.33.0",
    "torch>=2.8.0",
    "whisperx>=3.8.4",
    # Security patches
    "aiohttp>=3.13.4",
    "cryptography>=46.0.7",
    "Mako>=1.3.11",
    "pillow>=12.2.0",
    "Pygments>=2.20.0",
    # GPTilt Datasets Packages
    "ds-common",
    "ds-documents",
    "ds-hugging-face",
    "ds-riot-api",
    "ds-runtime",
    "ds-scribe",
    "ds-storage",
    "ds-tables"
]

[project.optional-dependencies]
private = ["ds-chatbot"]

[dependency-groups]
dev = [
    "dagster-webserver>=1.13.1",
    "dagster-dg-cli>=1.13.1",
]
cloud = [
    "dagster-cloud>=1.13.1",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
ds-common = { workspace = true }
ds-documents = { workspace = true }
ds-hugging-face = { workspace = true }
ds-riot-api = { workspace = true }
ds-runtime = { workspace = true }
ds-scribe = { workspace = true }
ds-storage = { workspace = true }
ds-tables = { workspace = true }
# Private Modules
ds-chatbot = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/orchestration"]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "orchestration"