[project]
name = "ds-leaguepedia"
version = "0.1.0"
dependencies = [
    "polars",
    "pyarrow",
    "pyiceberg",
    "mwcleric",
    "ds_platform",
    "ds_storage",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ds_leaguepedia"]
